--- a/Hero-1/Hero-1.html
+++ b/Hero-1/Hero-1.html
@@ -1,5 +1,16 @@
-
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./Hero-1.css">
+    <title>Document</title>
+</head>
+<body>
 <!--This creates a hero section-->
+
 <div class="hero_container ">
     <h2 class="text_center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, quasi.</h2>
     <div class="hero_row">
@@ -15,3 +26,5 @@
         </div>
     </div>
 </div>
+</body>
+</html>
